--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.1.18",
     "babel-core": "^6.2.1",
-    "electron-prebuilt": "^0.35.1"
+    "electron": "^1.4.15"
   }
 }
